bug(popover): feature clouds cut off (#4615)
* bug(popover): feature clouds cut off

* bug(popover): release notes

--- a/ui/components/popovers/walkthrough/_deprecate.scss
+++ b/ui/components/popovers/walkthrough/_deprecate.scss
@@ -48,7 +48,7 @@
     }
 
     .slds-popover__footer {
-      background-color: inherit;
+      background-color: transparent;
       border: 0;
     }
 
